--- a/azure-pipelines/jobs/steps/get_appinsights_con_str.yml
+++ b/azure-pipelines/jobs/steps/get_appinsights_con_str.yml
@@ -2,13 +2,13 @@
 parameters:
   - name: resourceGroupName
     type: string
-    default: $(resourceGroupName)
+    # default: $(resourceGroupName)
   - name: azureSubscription
     type: string
-    default: $(azureSubscription)
+    # default: $(azureSubscription)
 
 steps:
-  - script: 'env'
+  # - script: 'env'
   - task: AzurePowerShell@5
     displayName: 'Read Connection String'
     name: readAppInsights
