--- a/azure-pipelines/variables/main.yml
+++ b/azure-pipelines/variables/main.yml
@@ -2,6 +2,6 @@ variables:
   - name: environmentName
     value: 'staging'
   - name: mkdocsDeploy
-    value: 'True'
+    value: True
   - name: mkdocsSiteDir
     value: 'site'
