--- a/azure-pipelines/variables/stable.yml
+++ b/azure-pipelines/variables/stable.yml
@@ -2,6 +2,6 @@ variables:
   - name: environmentName
     value: 'production'
   - name: mkdocsDeploy
-    value: 'False'
+    value: False
   - name: mkdocsSiteDir
     value: 'site'
