--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -99,5 +99,6 @@ stages:
     jobs:
       - template: azure-pipelines/jobs/mkdocs-material.yml
         parameters:
+          pythonVersion: $(pythonVersion)
           mkdocsSiteDir: $(mkdocsSiteDir)
           mkdocsDeploy: ${{ variables.mkdocsDeploy }}
