--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,10 @@ variables:
     value: $[ variables['Build.SourceBranchName'] ]
     readonly: true
   - template: azure-pipelines/variables/default.yml
+  - ${{ if eq(variables.isMain, 'True') }}:
+      - template: azure-pipelines/variables/main.yml
+  - ${{ if eq(variables.isStable, 'True') }}:
+      - template: azure-pipelines/variables/stable.yml
 
 pool:
   vmImage: $(vmImageName)
@@ -37,18 +41,14 @@ pool:
 stages:
   - stage: Bicep
     dependsOn:
-    ${{ if eq(variables.isMain, 'True') }}:
-      variables:
-        - template: azure-pipelines/variables/main.yml
-    ${{ if eq(variables.isStable, 'True') }}:
-      variables:
-        - template: azure-pipelines/variables/stable.yml
+    variables:
+      - group: django-dev
     jobs:
       - template: azure-pipelines/jobs/validate_bicep.yml
       - ${{ if or(eq(variables.isMain, 'True'), eq(variables.isStable, 'True')) }}:
           - deployment: DeployBicep
             displayName: Create Azure Resources
-            environment: ${{ variables.environmentName }}
+            environment: $(environmentName)
             strategy:
               runOnce:
                 deploy:
@@ -57,7 +57,6 @@ stages:
 
   - stage: Testing
     dependsOn: Bicep
-    condition: in(dependencies.Bicep.result, 'Succeeded', 'Skipped')
     displayName: Run runTests
     variables:
       - group: django-dev
@@ -71,41 +70,35 @@ stages:
           - template: azure-pipelines/jobs/steps/python_django_test.yml
             parameters:
               pythonVersions:
-                - ${{ variables.pythonVersion }}
+                - '${{ variables.pythonVersion }}'
 
   - stage: WebApp
     dependsOn: Testing
-    ${{ if eq(variables.isMain, 'True') }}:
-      variables:
-        - template: azure-pipelines/variables/main.yml
-    ${{ if eq(variables.isStable, 'True') }}:
-      variables:
-        - template: azure-pipelines/variables/stable.yml
     jobs:
       - template: azure-pipelines/jobs/build_webapp.yml
         parameters:
-          pythonVersion: ${{ variables.pythonVersion }}
+          pythonVersion: $(pythonVersion)
+          resourceGroupName: $(resourceGroupName)
+          azureSubscription: $(azureSubscription)
+
       - ${{ if eq(variables.isStable, 'True') }}:
-          - deployment: DeployDjango
-            dependsOn: BuildWebApp
-            displayName: Deploy Django to WebApp
-            environment: $(environmentName)
+          - deployment: deployWebApp
+            displayName: 'Deploy WebApp'
+            environment: '${{ variables.environmentName }}'
             strategy:
               runOnce:
                 deploy:
                   steps:
                     - template: azure-pipelines/jobs/steps/deploy_webapp.yml
+                      parameters:
+                        resourceGroupName: $(resourceGroupName)
+                        azureSubscription: $(azureSubscription)
 
   - stage: MkDocs
     dependsOn: WebApp
-    ${{ if eq(variables.isMain, 'True') }}:
-      variables:
-        - template: azure-pipelines/variables/main.yml
-    ${{ if eq(variables.isStable, 'True') }}:
-      variables:
-        - template: azure-pipelines/variables/stable.yml
     jobs:
       - template: azure-pipelines/jobs/mkdocs-material.yml
         parameters:
-          mkdocsSiteDir: ${{ variables.mkdocsSiteDir }}
+          pythonVersion: $(pythonVersion)
+          mkdocsSiteDir: $(mkdocsSiteDir)
           mkdocsDeploy: ${{ variables.mkdocsDeploy }}
