--- a/azure-pipelines/jobs/steps/checkout_submodules.yml
+++ b/azure-pipelines/jobs/steps/checkout_submodules.yml
@@ -6,10 +6,9 @@ parameters:
   - name: checkoutSelf
     type: boolean
     default: true
-  # Submodule to update/init
+  # Submodule which should update/init
   - name: submodule
     type: string
-    default: ''
   # Update submodules recursive
   - name: recursive
     type: boolean
@@ -20,12 +19,6 @@ parameters:
     default: false
 
 steps:
-  - ${{ if eq(parameters.checkoutSelf, true) }}:
-      - checkout: self
-        submodules: false
-        displayName: Checkout self
-        persistCredentials: true
-
   - ${{ if eq(parameters.debug, true) }}:
       - script: ls -la ${{ parameters.submodule }}
         displayName: ls ${{ parameters.submodule }}
