--- a/azure-pipelines/variables/main.yml
+++ b/azure-pipelines/variables/main.yml
@@ -5,3 +5,5 @@ variables:
     value: True
   - name: mkdocsSiteDir
     value: 'site'
+  - name: webAppName
+    value: 'django-gh-devv72vvrgbr2qwa'
