--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 trigger:
+  batch: true
   branches:
     include:
       - refs/heads/stable
@@ -17,22 +18,29 @@ pr:
 variables:
   - group: django_gh
   - name: isMain
-    value: $[ eq(variables['Build.SourceBranch'], 'refs/heads/main') ]
+    value: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
     readonly: true
-  - name: isStable
-    value: $[ eq(variables['Build.SourceBranch'], 'refs/heads/stable') ]
+  - name: isProduction
+    value: $[eq(variables['Build.SourceBranch'], 'refs/heads/production')]
     readonly: true
   - name: isPullRequest
-    value: $[ eq(variables['Build.Reason'], 'PullRequest') ]
+    value: $[eq(variables['Build.Reason'], 'PullRequest')]
     readonly: true
-  - name: sourceBranchName
-    value: $[ variables['Build.SourceBranchName'] ]
+  - name: pythonVersion
+    value: '3.9'
     readonly: true
-  - template: azure-pipelines/variables/default.yml
-  - ${{ if eq(variables.isMain, 'True') }}:
-      - template: azure-pipelines/variables/main.yml
-  - ${{ if eq(variables.isStable, 'True') }}:
-      - template: azure-pipelines/variables/stable.yml
+  - name: resourceGroupName
+    value: 'django_gh'
+    readonly: true
+  - name: location
+    value: 'westeurope'
+    readonly: true
+  - name: azureSubscription
+    value: 'django_gh'
+    readonly: true
+  - name: vmImageName
+    value: 'ubuntu-latest'
+    readonly: true
 
 pool:
   vmImage: $(vmImageName)
@@ -45,30 +53,21 @@ stages:
       - group: django-superuser
     jobs:
       - template: azure-pipelines/jobs/validate_bicep.yml
-      - ${{ if eq(variables.sourceBranchName, 'main') }}:
-          - job:
+      - ${{ if eq(variables.isMain, 'True') }}:
+          - deployment: DeployBicep
             variables:
-              - group: django-dev
-              - group: django-superuser
-            steps:
-              - task: AzureCLI@2
-                name: DeployBicepFile
-                displayName: Deploy Bicep file
-                inputs:
-                  azureSubscription: 'django_gh'
-                  scriptType: bash
-                  scriptLocation: inlineScript
-                  inlineScript: |
-                    az deployment group create \
-                      --name $(Build.BuildNumber) \
-                      --resource-group $(resourceGroupName) \
-                      --template-file main.bicep \
-                      --parameters secretKey=$(secretKey)
-                env:
-                  secretKey: $(secretKey)
+              - template: azure-pipelines/variables/main.yml
+            displayName: Deploy Bicep
+            environment: $(environmentName)
+            strategy:
+              runOnce:
+                deploy:
+                  steps:
+                    - template: azure-pipelines/jobs/steps/deploy_bicep.yml
 
   - stage: Testing
     dependsOn: Bicep
+    condition: in(dependencies.Bicep.result, 'Succeeded', 'Skipped')
     displayName: Run runTests
     variables:
       - group: django-dev
@@ -82,32 +81,45 @@ stages:
           - template: azure-pipelines/jobs/steps/python_django_test.yml
             parameters:
               pythonVersions:
-                - '${{ variables.pythonVersion }}'
+                - $(pythonVersion)
 
   - stage: WebApp
     dependsOn: Testing
-    variables:
-      - group: django-dev
-      - group: django-superuser
+    condition: in(dependencies.Testing.result, 'Succeeded')
     jobs:
       - template: azure-pipelines/jobs/build_webapp.yml
-        parameters:
-          pythonVersion: $(pythonVersion)
-          resourceGroupName: $(resourceGroupName)
-          azureSubscription: $(azureSubscription)
-      - job:
-        condition: eq(variables.sourceBranchName, 'main')
-        steps:
-          - template: azure-pipelines/jobs/steps/deploy_webapp.yml
-            parameters:
-              resourceGroupName: 'django_gh'
-              azureSubscription: 'django_gh'
+      - ${{ if eq(variables.isProduction, 'True') }}:
+          - deployment: DeployDjango
+            dependsOn: BuildWebApp
+            displayName: Deploy Django to WebApp
+            environment: $(environmentName)
+            strategy:
+              runOnce:
+                deploy:
+                  steps:
+                    - template: azure-pipelines/jobs/steps/deploy_webapp.yml
 
   - stage: MkDocs
+    displayName: MkDocs-Material
     dependsOn: WebApp
+    condition: in(dependencies.WebApp.result, 'Succeeded')
     jobs:
-      - template: azure-pipelines/jobs/mkdocs-material.yml
-        parameters:
-          pythonVersion: $(pythonVersion)
-          mkdocsSiteDir: $(mkdocsSiteDir)
-          mkdocsDeploy: true
+      - job: buildMkDocs
+        displayName: Build MkDocs-Material
+        variables:
+          - group: django-dev
+          - group: django-superuser
+        dependsOn:
+        steps:
+          - template: azure-pipelines/jobs/steps/build_mkdocs.yml
+      - ${{ if eq(variables.isMain, 'True') }}:
+          - job: deployMkDocs
+            displayName: Deploy MkDocs-Material
+            dependsOn:
+            steps:
+              - template: azure-pipelines/jobs/steps/build_mkdocs.yml
+              - task: Bash@3
+                displayName: Deploy to GitHub-Pages
+                inputs:
+                  targetType: 'inline'
+                  script: 'mkdocs gh-deploy --force --clean'
