--- a/azure-pipelines/variables/main.yml
+++ b/azure-pipelines/variables/main.yml
@@ -1,6 +1,6 @@
 variables:
   - name: environmentName
-    value: 'staging'
+    value: 'develop'
     readonly: true
   - name: mkdocsDeploy
     value: true
