--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,29 +18,22 @@ pr:
 variables:
   - group: django_gh
   - name: isMain
-    value: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
+    value: $[ eq(variables['Build.SourceBranch'], 'refs/heads/main') ]
     readonly: true
-  - name: isProduction
-    value: $[eq(variables['Build.SourceBranch'], 'refs/heads/production')]
+  - name: isStable
+    value: $[ eq(variables['Build.SourceBranch'], 'refs/heads/stable') ]
     readonly: true
   - name: isPullRequest
-    value: $[eq(variables['Build.Reason'], 'PullRequest')]
+    value: $[ eq(variables['Build.Reason'], 'PullRequest') ]
     readonly: true
-  - name: pythonVersion
-    value: '3.9'
+  - name: sourceBranchName
+    value: $[ variables['Build.SourceBranchName'] ]
     readonly: true
-  - name: resourceGroupName
-    value: 'django_gh'
-    readonly: true
-  - name: location
-    value: 'westeurope'
-    readonly: true
-  - name: azureSubscription
-    value: 'django_gh'
-    readonly: true
-  - name: vmImageName
-    value: 'ubuntu-latest'
-    readonly: true
+  - template: azure-pipelines/variables/default.yml
+  - ${{ if eq(variables.isMain, 'True') }}:
+      - template: azure-pipelines/variables/main.yml
+  - ${{ if eq(variables.isStable, 'True') }}:
+      - template: azure-pipelines/variables/stable.yml
 
 pool:
   vmImage: $(vmImageName)
@@ -53,21 +46,22 @@ stages:
       - group: django-superuser
     jobs:
       - template: azure-pipelines/jobs/validate_bicep.yml
-      - ${{ if eq(variables.isMain, 'True') }}:
-          - deployment: DeployBicep
-            variables:
-              - template: azure-pipelines/variables/main.yml
-            displayName: Deploy Bicep
+      - ${{ if eq(variables.isProduction, 'True') }}:
+          - deployment: DeployDjango
+            dependsOn: BuildWebApp
+            displayName: Deploy Django to WebApp
             environment: $(environmentName)
             strategy:
               runOnce:
                 deploy:
                   steps:
-                    - template: azure-pipelines/jobs/steps/deploy_bicep.yml
+                    - template: azure-pipelines/jobs/steps/deploy_webapp.yml
+                      parameters:
+                        resourceGroupName: $(resourceGroupName)
+                        azureSubscription: $(azureSubscription)
 
   - stage: Testing
     dependsOn: Bicep
-    condition: in(dependencies.Bicep.result, 'Succeeded', 'Skipped')
     displayName: Run runTests
     variables:
       - group: django-dev
@@ -81,26 +75,31 @@ stages:
           - template: azure-pipelines/jobs/steps/python_django_test.yml
             parameters:
               pythonVersions:
-                - $(pythonVersion)
+                - '${{ variables.pythonVersion }}'
 
   - stage: WebApp
     dependsOn: Testing
-    condition: in(dependencies.Testing.result, 'Succeeded')
+    variables:
+      - group: django-dev
+      - group: django-superuser
     jobs:
       - template: azure-pipelines/jobs/build_webapp.yml
-      - ${{ if eq(variables.isProduction, 'True') }}:
-          - deployment: DeployDjango
-            dependsOn: BuildWebApp
-            displayName: Deploy Django to WebApp
-            environment: $(environmentName)
-            strategy:
-              runOnce:
-                deploy:
-                  steps:
-                    - template: azure-pipelines/jobs/steps/deploy_webapp.yml
+        parameters:
+          pythonVersion: $(pythonVersion)
+          resourceGroupName: $(resourceGroupName)
+          azureSubscription: $(azureSubscription)
+      - job:
+        condition: eq(variables.sourceBranchName, 'main')
+        steps:
+          - template: azure-pipelines/jobs/steps/deploy_webapp.yml
+            parameters:
+              resourceGroupName: $(resourceGroupName)
+              azureSubscription: $(azureSubscription)
 
   - stage: MkDocs
     displayName: MkDocs-Material
+    variables:
+      - template: azure-pipelines/variables/main.yml
     dependsOn: WebApp
     condition: in(dependencies.WebApp.result, 'Succeeded')
     jobs:
@@ -112,14 +111,13 @@ stages:
         dependsOn:
         steps:
           - template: azure-pipelines/jobs/steps/build_mkdocs.yml
-      - ${{ if eq(variables.isMain, 'True') }}:
-          - job: deployMkDocs
-            displayName: Deploy MkDocs-Material
-            dependsOn:
-            steps:
-              - template: azure-pipelines/jobs/steps/build_mkdocs.yml
-              - task: Bash@3
-                displayName: Deploy to GitHub-Pages
-                inputs:
-                  targetType: 'inline'
-                  script: 'mkdocs gh-deploy --force --clean'
+            parameters:
+              mkdocsDeploy: $[eq(variables['Build.SourceBranch'], 'refs/heads/stable')]
+              pythonVersion: $(pythonVersion)
+              mkdocsSiteDir: $(mkdocsSiteDir)
+          # - ${{ if eq(variables.isMain, 'True') }}:
+          #     - task: Bash@3
+          #       displayName: Deploy to GitHub-Pages
+          #       inputs:
+          #         targetType: 'inline'
+          #         script: 'mkdocs gh-deploy --force --clean'
