--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -112,7 +112,7 @@ stages:
         steps:
           - template: azure-pipelines/jobs/steps/build_mkdocs.yml
             parameters:
-              mkdocsDeploy: ${{ variables.isMain }}
+              mkdocsDeploy: eq(variables.isMain, 'True')
               pythonVersion: $(pythonVersion)
               mkdocsSiteDir: $(mkdocsSiteDir)
           # - ${{ if eq(variables.isMain, 'True') }}:
