--- a/azure-pipelines/jobs/steps/build_mkdocs.yml
+++ b/azure-pipelines/jobs/steps/build_mkdocs.yml
@@ -5,7 +5,7 @@ parameters:
   - name: mkdocsSiteDir
     type: string
   - name: mkdocsDeploy
-    type: boolean
+    type: string
 
 steps:
   - task: UsePythonVersion@0
