--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,19 +46,20 @@ stages:
       - group: django-superuser
     jobs:
       - template: azure-pipelines/jobs/validate_bicep.yml
-      - ${{ if eq(variables.isProduction, 'True') }}:
-          - deployment: DeployDjango
-            dependsOn: BuildWebApp
-            displayName: Deploy Django to WebApp
-            environment: $(environmentName)
-            strategy:
-              runOnce:
-                deploy:
-                  steps:
-                    - template: azure-pipelines/jobs/steps/deploy_webapp.yml
-                      parameters:
-                        resourceGroupName: $(resourceGroupName)
-                        azureSubscription: $(azureSubscription)
+      # - ${{ if eq(variables.isMain, 'True') }}:
+      - deployment: DeployDjango
+        dependsOn: BuildWebApp
+        condition: eq(variables.isMain, 'True')
+        displayName: Deploy Django to WebApp
+        environment: $(environmentName)
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - template: azure-pipelines/jobs/steps/deploy_webapp.yml
+                  parameters:
+                    resourceGroupName: $(resourceGroupName)
+                    azureSubscription: $(azureSubscription)
 
   - stage: Testing
     dependsOn: Bicep
@@ -82,6 +83,7 @@ stages:
     variables:
       - group: django-dev
       - group: django-superuser
+      - template: azure-pipelines/variables/main.yml
     jobs:
       - template: azure-pipelines/jobs/build_webapp.yml
         parameters:
@@ -89,7 +91,7 @@ stages:
           resourceGroupName: $(resourceGroupName)
           azureSubscription: $(azureSubscription)
       - job:
-        condition: eq(variables.sourceBranchName, 'main')
+        condition: eq(variables.isMain, 'True')
         steps:
           - template: azure-pipelines/jobs/steps/deploy_webapp.yml
             parameters:
