--- a/azure-pipelines/jobs/steps/build_webapp.yml
+++ b/azure-pipelines/jobs/steps/build_webapp.yml
@@ -2,8 +2,14 @@ parameters:
   - name: pythonVersion
     type: string
     default: '3.9'
+  - name: printEnv
+    type: boolean
+    default: true
 
 steps:
+  - script: env
+    displayName: Print Env
+
   - task: UsePythonVersion@0
     displayName: 'Use Python ${{ parameters.pythonVersion }}'
     inputs:
@@ -20,8 +26,8 @@ steps:
     workingDirectory: $(projectRoot)
     displayName: 'Install Requirements'
 
-  - ${{ if or( eq(variables.isStable, 'True'), eq(variables.isMain, 'True') ) }}:
-      - task: PublishPipelineArtifact@1
-        inputs:
-          targetPath: $(projectRoot)
-          artifactName: WebApp
+  - task: PublishPipelineArtifact@1
+    condition: eq(variables.isMain, 'True')
+    inputs:
+      targetPath: $(projectRoot)
+      artifactName: WebApp
