--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
       - template: azure-pipelines/jobs/validate_bicep.yml
       # - ${{ if eq(variables.isMain, 'True') }}:
       - deployment: DeployDjango
-        dependsOn: BuildWebApp
+        # dependsOn: BuildWebApp
         condition: eq(variables.isMain, 'True')
         displayName: Deploy Django to WebApp
         environment: $(environmentName)
