give name buildWebApp to build job

--- a/azure-pipelines/jobs/build_webapp.yml
+++ b/azure-pipelines/jobs/build_webapp.yml
@@ -7,7 +7,7 @@ parameters:
     type: string
 
 jobs:
-  - job:
+  - job: buildWebApp
     displayName: 'build WebApp'
     steps:
       - checkout: self
