--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,29 +76,30 @@ stages:
           pythonVersion: $(pythonVersion)
           resourceGroupName: $(resourceGroupName)
           azureSubscription: $(azureSubscription)
-      - deployment: DeployDjango
-        dependsOn: buildWebApp
-        condition: eq(variables.isMain, 'True')
-        displayName: Deploy Django to WebApp
-        environment: $(environmentName)
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - template: azure-pipelines/jobs/steps/deploy_webapp.yml
-                  parameters:
-                    resourceGroupName: $(resourceGroupName)
-                    azureSubscription: $(azureSubscription)
+      - ${{ if eq(variables.isMain, 'True') }}:
+          - deployment: DeployDjango
+            dependsOn: buildWebApp
+            condition: succeeded()
+            displayName: Deploy Django to WebApp
+            environment: $(environmentName)
+            strategy:
+              runOnce:
+                deploy:
+                  steps:
+                    - template: azure-pipelines/jobs/steps/deploy_webapp.yml
+                      parameters:
+                        resourceGroupName: $(resourceGroupName)
+                        azureSubscription: $(azureSubscription)
   - stage: MkDocs
     displayName: MkDocs-Material
     variables:
       - template: azure-pipelines/variables/main.yml
     dependsOn: WebApp
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+    condition: succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
     # condition: in(dependencies.WebApp.result, 'Succeeded')
     jobs:
       - template: azure-pipelines/jobs/mkdocs-material.yml
         parameters:
           pythonVersion: $(pythonVersion)
           mkdocsSiteDir: $(mkdocsSiteDir)
-          mkdocsDeploy: ${{ eq(variables.isMain, 'True') }}
+          mkdocsDeploy: $(mkdocsDeploy)
