change variables.mkdocsDeploy to string

--- a/azure-pipelines/variables/main.yml
+++ b/azure-pipelines/variables/main.yml
@@ -3,7 +3,7 @@ variables:
     value: 'develop'
     readonly: true
   - name: mkdocsDeploy
-    value: true
+    value: 'True'
     readonly: true
   - name: mkdocsSiteDir
     value: 'site'
