--- a/azure-pipelines/jobs/mkdocs-material.yml
+++ b/azure-pipelines/jobs/mkdocs-material.yml
@@ -4,7 +4,7 @@ parameters:
   - name: mkdocsSiteDir
     type: string
   - name: mkdocsDeploy
-    type: boolean
+    type: string
 
 jobs:
   - job:
