--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -95,7 +95,7 @@ stages:
     variables:
       - template: azure-pipelines/variables/main.yml
     dependsOn: WebApp
-    condition: succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+    condition: succeeded()
     # condition: in(dependencies.WebApp.result, 'Succeeded')
     jobs:
       - template: azure-pipelines/jobs/mkdocs-material.yml
