--- a/azure-pipelines/jobs/mkdocs-material.yml
+++ b/azure-pipelines/jobs/mkdocs-material.yml
@@ -1,7 +1,7 @@
 parameters:
   - name: pythonVersion
     type: string
-    # default: ${{ variables['pythonVersion'] }}
+    default: $(pythonVersion)
   - name: mkdocsSiteDir
     type: string
     default: 'site'
