--- a/azure-pipelines/jobs/steps/deploy_bicep.yml
+++ b/azure-pipelines/jobs/steps/deploy_bicep.yml
@@ -1,8 +1,8 @@
 steps:
-  - checkout: self
-    submodules: no
-    persistCredentials: true
-    displayName: Checkout self
+  # - checkout: self
+  #   submodules: no
+  #   persistCredentials: true
+  #   displayName: Checkout self
 
   - task: AzureCLI@2
     name: DeployBicepFile
