Issue/pipelines/fix deployments (#74)
* use condition to determine webapp deployment

* remove out commented condition

* move deployment step
from build_mkdocs.yml into job template mkdocs-material.yml

* use condition to determine mkdocs deployment

* add default value for pythonVersion to mkdocs job

* remove checkout of self from deploy_bicep.yml

* add job template for bicep
it includes everything from validate_bicep as well as deployment when:
- all checks where successfull
- source branch is main

* use new bicep.yml job template

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ stages:
       - group: django-dev
       - group: django-superuser
     jobs:
-      - template: azure-pipelines/jobs/validate_bicep.yml
+      - template: azure-pipelines/jobs/bicep.yml
 
   - stage: Testing
     dependsOn: Bicep
@@ -76,27 +76,25 @@ stages:
           pythonVersion: $(pythonVersion)
           resourceGroupName: $(resourceGroupName)
           azureSubscription: $(azureSubscription)
-      - ${{ if eq(variables.isMain, 'True') }}:
-          - deployment: DeployDjango
-            dependsOn: buildWebApp
-            condition: succeeded()
-            displayName: Deploy Django to WebApp
-            environment: $(environmentName)
-            strategy:
-              runOnce:
-                deploy:
-                  steps:
-                    - template: azure-pipelines/jobs/steps/deploy_webapp.yml
-                      parameters:
-                        resourceGroupName: $(resourceGroupName)
-                        azureSubscription: $(azureSubscription)
+      - deployment: DeployDjango
+        dependsOn: buildWebApp
+        condition: and(succeeded(), eq(variables.isMain, 'True'))
+        displayName: Deploy Django to WebApp
+        environment: $(environmentName)
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - template: azure-pipelines/jobs/steps/deploy_webapp.yml
+                  parameters:
+                    resourceGroupName: $(resourceGroupName)
+                    azureSubscription: $(azureSubscription)
   - stage: MkDocs
     displayName: MkDocs-Material
     variables:
       - template: azure-pipelines/variables/main.yml
     dependsOn: WebApp
     condition: succeeded()
-    # condition: in(dependencies.WebApp.result, 'Succeeded')
     jobs:
       - template: azure-pipelines/jobs/mkdocs-material.yml
         parameters:
