--- a/azure-pipelines/jobs/mkdocs-material.yml
+++ b/azure-pipelines/jobs/mkdocs-material.yml
@@ -1,10 +1,13 @@
 parameters:
   - name: pythonVersion
     type: string
+    default: $(pythonVersion)
   - name: mkdocsSiteDir
     type: string
+    default: 'site'
   - name: mkdocsDeploy
     type: string
+    default: 'False'
 
 jobs:
   - job:
@@ -13,8 +16,12 @@ jobs:
       - template: steps/checkout_submodules.yml
         parameters:
           submodule: 'src/mkdocs-material'
+
       - template: steps/build_mkdocs.yml
         parameters:
           pythonVersion: '${{ parameters.pythonVersion }}'
           mkdocsSiteDir: '${{ parameters.mkdocsSiteDir }}'
-          mkdocsDeploy: '${{ parameters.mkdocsDeploy }}'
+
+      - script: mkdocs gh-deploy --force --site-dir ${{ parameters.mkdocsSiteDir }} --verbose
+        condition: eq(variables.isMain, 'True')
+        displayName: deploy to GitHub-Pages
