reenable step to read web apps Name

--- a/azure-pipelines/jobs/steps/deploy_webapp.yml
+++ b/azure-pipelines/jobs/steps/deploy_webapp.yml
@@ -7,19 +7,19 @@ parameters:
     default: 'django_gh'
 
 steps:
-  # - task: AzurePowerShell@5
-  #   name: readWebAppName
-  #   displayName: Read WebApp Name
-  #   retryCountOnTaskFailure: 3
-  #   continueOnError: false
-  #   inputs:
-  #     azureSubscription: '${{ parameters.azureSubscription }}'
-  #     ScriptType: InlineScript
-  #     Inline: |
-  #       $webAppName = ( Get-AzWebApp -ResourceGroupName ${{ parameters.resourceGroupName }} ).Name
-  #       Write-Host "##vso[task.setvariable variable=webAppName]$webAppName"
-  #     azurePowerShellVersion: LatestVersion
-  #     pwsh: true
+  - task: AzurePowerShell@5
+    name: readWebAppName
+    displayName: Read WebApp Name
+    retryCountOnTaskFailure: 3
+    continueOnError: false
+    inputs:
+      azureSubscription: '${{ parameters.azureSubscription }}'
+      ScriptType: InlineScript
+      Inline: |
+        $webAppName = ( Get-AzWebApp -ResourceGroupName ${{ parameters.resourceGroupName }} ).Name
+        Write-Host "##vso[task.setvariable variable=webAppName]$webAppName"
+      azurePowerShellVersion: LatestVersion
+      pwsh: true
 
   # Download an artifact named 'WebApp' to 'bin' in $(Build.SourcesDirectory)
   - task: DownloadPipelineArtifact@2
