change variable template main.yml - remove webappName - remove readonly from rest of variables

--- a/azure-pipelines/variables/main.yml
+++ b/azure-pipelines/variables/main.yml
@@ -1,13 +1,7 @@
 variables:
   - name: environmentName
-    value: 'develop'
-    readonly: true
+    value: 'development'
   - name: mkdocsDeploy
     value: 'True'
-    readonly: true
   - name: mkdocsSiteDir
     value: 'site'
-    readonly: true
-  - name: webAppName
-    value: 'django-gh-devv72vvrgbr2qwa'
-    readonly: true
