--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,6 +49,7 @@ stages:
 
   - stage: Testing
     dependsOn: Bicep
+    condition: succeeded()
     displayName: Run runTests
     variables:
       - group: django-dev
@@ -66,34 +67,24 @@ stages:
 
   - stage: WebApp
     dependsOn: Testing
+    condition: succeeded()
     variables:
       - group: django-dev
       - group: django-superuser
-      - template: azure-pipelines/variables/main.yml
     jobs:
       - template: azure-pipelines/jobs/build_webapp.yml
         parameters:
           pythonVersion: $(pythonVersion)
           resourceGroupName: $(resourceGroupName)
           azureSubscription: $(azureSubscription)
-      - deployment: DeployDjango
-        dependsOn: buildWebApp
-        condition: and(succeeded(), eq(variables.isMain, 'True'))
-        displayName: Deploy Django to WebApp
-        environment: $(environmentName)
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - template: azure-pipelines/jobs/steps/deploy_webapp.yml
-                  parameters:
-                    resourceGroupName: $(resourceGroupName)
-                    azureSubscription: $(azureSubscription)
+      - template: azure-pipelines/jobs/deploy_webapp.yml
+        parameters:
+          environmentName: $(environmentName)
+          resourceGroupName: $(resourceGroupName)
+          azureSubscription: $(azureSubscription)
 
   - stage: MkDocs
     displayName: MkDocs-Material
-    variables:
-      - template: azure-pipelines/variables/main.yml
     dependsOn: WebApp
     condition: succeeded()
     jobs:
