update deploy_webapp job template - add checkout step with persist credentials set to true

--- a/azure-pipelines/jobs/deploy_webapp.yml
+++ b/azure-pipelines/jobs/deploy_webapp.yml
@@ -16,6 +16,10 @@ jobs:
       runOnce:
         deploy:
           steps:
+            - checkout: self
+              persistCredentials: true
+              submodules: false
+
             - template: steps/get_webapp_name.yml
               parameters:
                 resourceGroupName: ${{ parameters.resourceGroupName }}
