update checkout_submodules - add option to checkout self with persistCredentials set to true

--- a/azure-pipelines/jobs/steps/checkout_submodules.yml
+++ b/azure-pipelines/jobs/steps/checkout_submodules.yml
@@ -19,6 +19,11 @@ parameters:
     default: false
 
 steps:
+  - ${{ if eq(parameters.checkoutSelf, true) }}:
+      - checkout: self
+        persistCredentials: true
+        submodules: false
+
   - ${{ if eq(parameters.debug, true) }}:
       - script: ls -la ${{ parameters.submodule }}
         displayName: ls ${{ parameters.submodule }}
