--- a/azure-pipelines/jobs/steps/build_webapp.yml
+++ b/azure-pipelines/jobs/steps/build_webapp.yml
@@ -4,10 +4,14 @@ parameters:
     default: '3.9'
   - name: printEnv
     type: boolean
-    default: true
+    default: False
+  - name: publishArtifact
+    type: boolean
+    default: False
 
 steps:
   - script: env
+    condition: eq(parameters.prinvEnv, 'True')
     displayName: Print Env
 
   - task: UsePythonVersion@0
@@ -27,7 +31,9 @@ steps:
     displayName: 'Install Requirements'
 
   - task: PublishPipelineArtifact@1
-    condition: eq(variables.isMain, 'True')
+    condition: eq(parameters.publishArtifact, 'True')
+    displayName: Publish Pipeline Artifact
     inputs:
       targetPath: $(projectRoot)
       artifactName: WebApp
+      publishLocation: pipeline
