--- a/azure-pipelines/jobs/mkdocs-material.yml
+++ b/azure-pipelines/jobs/mkdocs-material.yml
@@ -10,18 +10,19 @@ parameters:
     default: 'False'
 
 jobs:
-  - job:
+  - job: mkdocs
     displayName: MkDocs-Material
     steps:
       - template: steps/checkout_submodules.yml
         parameters:
           submodule: 'src/mkdocs-material'
+          checkoutSelf: True
 
       - template: steps/build_mkdocs.yml
         parameters:
           pythonVersion: '${{ parameters.pythonVersion }}'
           mkdocsSiteDir: '${{ parameters.mkdocsSiteDir }}'
 
-      - script: mkdocs gh-deploy --force --site-dir ${{ parameters.mkdocsSiteDir }} --verbose
-        condition: eq(variables.isMain, 'True')
+      - script: mkdocs gh-deploy --force --site-dir '${{ parameters.mkdocsSiteDir }}' --verbose
+        condition: eq(parameters.mkdocsDeploy, 'True')
         displayName: deploy to GitHub-Pages
