add trigger update/* to azure-piipelines.yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,7 @@ trigger:
       - refs/heads/main
       - feature/*
       - issue/*
+      - update/*
     exclude:
       - feature/experimental/*
 
