--- a/azure-pipelines/jobs/steps/build_webapp.yml
+++ b/azure-pipelines/jobs/steps/build_webapp.yml
@@ -11,7 +11,7 @@ parameters:
 
 steps:
   - script: env
-    condition: eq(parameters.prinvEnv, 'True')
+    condition: eq({{ parameters.prinvEnv }}, 'True')
     displayName: Print Env
 
   - task: UsePythonVersion@0
