fix build_webapp remove condition, add expression to determine if step should be enabled

--- a/azure-pipelines/jobs/steps/build_webapp.yml
+++ b/azure-pipelines/jobs/steps/build_webapp.yml
@@ -11,7 +11,7 @@ parameters:
 
 steps:
   - script: env
-    condition: eq(parameters.printEnv, 'True')
+    enabled: ${{ parameters.printEnv }}
     displayName: Print Env
 
   - task: UsePythonVersion@0
