fix build_webapp step template - remove condition from publish pipeline artifact step - add enabled to publish pipeline artifact with value of publishArtifact

--- a/azure-pipelines/jobs/steps/build_webapp.yml
+++ b/azure-pipelines/jobs/steps/build_webapp.yml
@@ -24,7 +24,7 @@ steps:
     displayName: 'Install Requirements'
 
   - task: PublishPipelineArtifact@1
-    condition: eq(parameters.publishArtifact, 'True')
+    enabled: ${{ parameters.publishArtifact }}
     displayName: Publish Pipeline Artifact
     inputs:
       targetPath: $(projectRoot)
