--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,7 +78,7 @@ stages:
           pythonVersion: $(pythonVersion)
           resourceGroupName: $(resourceGroupName)
           azureSubscription: $(azureSubscription)
-          ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/main') }}:
+          ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/stable') }}:
             publishArtifact: true
 
       - template: azure-pipelines/jobs/deploy_webapp.yml
